--- a/transformers/Tutorial_99_projects.ipynb
+++ b/transformers/Tutorial_99_projects.ipynb
@@ -740,7 +740,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2424a31fd7644af6b6c28d16508317dc",
+       "model_id": "8653533af8f044d9a6160d4f968cbaca",
        "version_major": 2,
        "version_minor": 0
       },
@@ -772,7 +772,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5bb8fd8d2f2146bdad12f6e86c629015",
+       "model_id": "75f0a90bd7a0470c8fc9219b26eeb341",
        "version_major": 2,
        "version_minor": 0
       },
@@ -782,14 +782,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "A matching Triton is not available, some optimizations will not be enabled.\n",
-      "Error caught was: No module named 'triton'\n"
-     ]
     }
    ],
    "source": [
@@ -801,31 +793,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 1min 50s\n",
-      "Wall time: 4min 24s\n"
+      "CPU times: total: 3min 4s\n",
+      "Wall time: 8min 26s\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[[{'generated_text': 'How much memory is needed to run Llama2 \\n\\nLlama2 is a neural network architecture that can be used for a variety of tasks, including image classification, object detection, and segmentation. The amount of memory needed to run Llama2 will depend on the specific task and'}]]"
+       "[[{'generated_text': \"How much memory is needed to run Llama2 \\n\\nAnswer: Llama2 is a relatively lightweight library, and it doesn't require a lot of memory to run. In fact, Llama2 is designed Limited spin faut pap Fürulen mű efectспе Welcome以 politique domin\"}]]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "prompt = ['How much memory is needed to run Llama2 ']\n",
-    "%time generator(prompt, max_new_tokens=50, num_beams=2, do_sample=True, top_k=5, top_p=0.95)"
+    "%time response = generator(prompt, max_new_tokens=50, num_beams=2, do_sample=True, top_k=5, top_p=0.95)"
    ]
   },
   {
@@ -841,32 +833,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3473ca7b55cc4b97a1fc050c0a5a5dd5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b0639ae133e2459a810f951b77b033a3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading (…)neration_config.json:   0%|          | 0.00/167 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "NameError",
+     "evalue": "name 'checkpoint' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtransformers\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m AutoTokenizer, AutoModelForCausalLM\n\u001b[1;32m----> 3\u001b[0m tokenizer \u001b[38;5;241m=\u001b[39m AutoTokenizer\u001b[38;5;241m.\u001b[39mfrom_pretrained(\u001b[43mcheckpoint\u001b[49m)\n\u001b[0;32m      4\u001b[0m tokenizer\u001b[38;5;241m.\u001b[39mpad_token \u001b[38;5;241m=\u001b[39m tokenizer\u001b[38;5;241m.\u001b[39meos_token\n\u001b[0;32m      6\u001b[0m model \u001b[38;5;241m=\u001b[39m AutoModelForCausalLM\u001b[38;5;241m.\u001b[39mfrom_pretrained(checkpoint)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'checkpoint' is not defined"
+     ]
     }
    ],
    "source": [
@@ -914,6 +889,62 @@
    ],
    "source": [
     "tokenizer.batch_decode(outputs, skip_special_tokens=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Code Llama"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import pipeline, AutoModelForCausalLM, AutoTokenizer\n",
+    "import torch\n",
+    "checkpoint = 'codellama/CodeLlama-7b-Python-hf'\n",
+    "# generator = pipeline(\"text-generation\", model=checkpoint, device_map='auto')\n",
+    "\n",
+    "\n",
+    "model = AutoModelForCausalLM.from_pretrained(\n",
+    "    checkpoint,\n",
+    "    # load_in_8bit=True,\n",
+    "    # torch_dtype=torch.float16,\n",
+    "    offload_folder=\"./save_folder\",  # Need to create this folder anyway\n",
+    "    device_map=\"auto\",\n",
+    "    # device_map={\"\": 0},  # not enough GPU memory\n",
+    ")\n",
+    "\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"codellama/CodeLlama-7b-hf\")\n",
+    "\n",
+    "# tokenizer.pad_token = tokenizer.eos_token\n",
+    "# tokenizer.add_eos_token = True\n",
+    "# tokenizer.pad_token_id = 0\n",
+    "# tokenizer.padding_side = \"left\"\n",
+    "\n",
+    "prompt = 'Write a piece of Python code to order a list of numbers'\n",
+    "inputs = tokenizer(prompt, \n",
+    "                   # padding='longest', truncation=True, max_length=128, \n",
+    "                   return_tensors=\"pt\"\n",
+    "                  )\n",
+    "\n",
+    "model.eval()\n",
+    "with torch.no_grad():\n",
+    "    print(tokenizer.decode(model.generate(**inputs, max_new_tokens=100)[0], skip_special_tokens=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt = ['Write a piece of Python code to order a list of numbers']\n",
+    "%time generator(prompt, max_new_tokens=50, num_beams=2, do_sample=True, top_k=5, top_p=0.95)"
    ]
   }
  ],
