--- a/transformers/Tutorial_1_modeling.ipynb
+++ b/transformers/Tutorial_1_modeling.ipynb
@@ -243,7 +243,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Running a specific model"
+    "## Load a specific model and config"
    ]
   },
   {
@@ -1684,17 +1684,20 @@
    "outputs": [],
    "source": [
     "raw_datasets = load_dataset(**dataset_name)\n",
-    "\n",
     "checkpoint = \"bert-base-uncased\"\n",
     "tokenizer = AutoTokenizer.from_pretrained(checkpoint)\n",
+    "\n",
+    "# Tokenization\n",
     "def tokenize_function(sample):\n",
     "    return tokenizer(sample['sentence1'], sample['sentence2'], truncation=True)\n",
     "\n",
     "tokenized_datasets = raw_datasets.map(tokenize_function)\n",
     "\n",
+    "# Get labels\n",
     "ds_builder = datasets.load_dataset_builder(**dataset_name_sst2)\n",
     "num_labels = ds_builder.info.features['label'].num_classes \n",
     "\n",
+    "# Define collator\n",
     "data_collator = DataCollatorWithPadding(tokenizer=tokenizer)"
    ]
   },
