--- a/transformers/Tutorial_7_3_fine_tune_a_masked_lm.ipynb
+++ b/transformers/Tutorial_7_3_fine_tune_a_masked_lm.ipynb
@@ -4,10 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fine tune with IMDB data. Course on https://huggingface.co/learn/nlp-course/en/chapter7/3?fw=tf  \n",
-    "The fine-tuned model will resemble the given corpus in NLP tasks\n",
-    " - Domain adaptation/Transfer learning: This process of fine-tuning a pretrained language model on in-domain data  \n",
-    " - Masked language modeling: predict missing word"
+    "Fine tune with IMDB data. Course on https://huggingface.co/learn/nlp-course/en/chapter7/3?fw=tf  "
    ]
   },
   {
@@ -420,9 +417,11 @@
     "if is_whole_word_masking:\n",
     "    run_datasets = lm_datasets[\"train\"]\n",
     "    run_data_collator = whole_word_masking_data_collator\n",
+    "    remove_unused_columns = False\n",
     "else:\n",
     "    run_datasets = lm_datasets[\"train\"].remove_columns(\"word_ids\")\n",
     "    run_data_collator = data_collator\n",
+    "    remove_unused_columns = True\n",
     "\n",
     "downsampled_dataset = run_datasets.train_test_split(\n",
     "    train_size=train_size, test_size=test_size, seed=42\n",
@@ -512,7 +511,7 @@
     "    per_device_eval_batch_size=batch_size,\n",
     "    fp16=True,  # enable mixed-precision training, which gives a boost in speed\n",
     "    logging_steps=logging_steps,\n",
-    "    remove_unused_columns=False,  # By default, the Trainer will remove any columns that are not part of the model’s forward() method. \n",
+    "    remove_unused_columns=remove_unused_columns,  # By default, the Trainer will remove any columns that are not part of the model’s forward() method. \n",
     "    # So if you’re using the whole word masking collator, you’ll also need to set remove_unused_columns=False to ensure we don’t lose the word_ids column during training.\n",
     "    push_to_hub=True,\n",
     "    hub_model_id=hub_model_id,\n",
@@ -717,7 +716,7 @@
     "## Train with Accelerate for customization\n",
     "\n",
     "### Create an eval dataset with random masking\n",
-    "In the above run, DataCollatorForLanguageModeling applies random masking with eval_dataset for every epoch, which adds randomness in evaulation.  \n",
+    "In the run above, DataCollatorForLanguageModeling applies random masking with eval_dataset for every epoch, which adds randomness in evaulation.  \n",
     "The follows apply the masking once on the whole test set, and then use the default data collator in HF Transformers to collect the batches during evaluation."
    ]
   },
